--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-asgiref==3.2.10
-Django==3.0.5
-djongo==1.3.3
-dnspython==2.0.0
-gunicorn==20.0.4
-Pillow==7.2.0
-pymongo==3.10.1
-pytz==2020.1
-sqlparse==0.2.4
+asgiref==3.4.1
+dj-mongo-database-url==0.1.1
+Django==3.2.8
+djongo==1.3.6
+dnspython==2.1.0
+gunicorn==20.1.0
+Pillow==8.3.2
+psycopg2-binary==2.9.1
+pymongo==3.12.0
+pytz==2021.3
+sqlparse==0.4.2
+whitenoise==5.3.0
